completitud de codigo para publicar background de fondo

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container-fluid">
 
-        <div class="centrar" id="centrarCarga" style="background-image: url(/images/fondo.png);">
+        <div class="centrar" id="centrarCarga">
 
           <div class="caja">
 
