--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
   <body>
-    <div class="container-fluid">
+    <div class="container-fluid" style="background-image: url('images/fondo.png');">
       
         <div class="centrar" id="centrarCarga">
           
